// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdherenceGraph Component renders AdherenceGraph snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 16,
          "marginTop": 128,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="prev-week-button"
      >
        <Icon
          color="#14b8a6"
          name="chevron-back"
          size={24}
        />
      </View>
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 28,
          }
        }
        testID="week-title"
      >
        April 20 - April 26, 2025
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="next-week-button"
      >
        <Icon
          color="#14b8a6"
          name="chevron-forward"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "borderBottomColor": "rgba(209, 213, 219, 1)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(209, 213, 219, 1)",
            "borderLeftWidth": 2,
            "borderRightColor": "rgba(209, 213, 219, 1)",
            "borderRightWidth": 2,
            "borderTopColor": "rgba(209, 213, 219, 1)",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 2,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
              "fontWeight": "700",
              "lineHeight": 28,
              "textAlign": "center",
            }
          }
        >
          Average Adherence: 
          85
          %
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 24,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 28,
            "marginBottom": 8,
          }
        }
      >
        Weekly Adherence
      </Text>
      <View
        data-chartdata="{"labels":["Mon","Tue","Wed","Thu","Fri","Sat","Sun"],"datasets":[{"data":[75,80,100,85,90,70,95]}]}"
        testID="line-chart"
      >
        <Text>
          LineChart
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 32,
          "marginTop": 24,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 28,
            "marginBottom": 8,
          }
        }
      >
        Exercise History
      </Text>
      <View
        style={
          {
            "borderBottomColor": "rgba(209, 213, 219, 1)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(209, 213, 219, 1)",
            "borderLeftWidth": 2,
            "borderRightColor": "rgba(209, 213, 219, 1)",
            "borderRightWidth": 2,
            "borderTopColor": "rgba(209, 213, 219, 1)",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 2,
            "marginBottom": 12,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "700",
            }
          }
          testID="adherence-history-date-0"
        >
          Sunday, April 27
        </Text>
        <Text>
          3/4
           active exercises completed
        </Text>
        <Text
          style={
            {
              "color": "#14b8a6",
            }
          }
        >
          Adherence: 
          75
          %
        </Text>
      </View>
      <View
        style={
          {
            "borderBottomColor": "rgba(209, 213, 219, 1)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(209, 213, 219, 1)",
            "borderLeftWidth": 2,
            "borderRightColor": "rgba(209, 213, 219, 1)",
            "borderRightWidth": 2,
            "borderTopColor": "rgba(209, 213, 219, 1)",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 2,
            "marginBottom": 12,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "700",
            }
          }
          testID="adherence-history-date-1"
        >
          Saturday, April 26
        </Text>
        <Text>
          4/4
           active exercises completed
        </Text>
        <Text
          style={
            {
              "color": "#14b8a6",
            }
          }
        >
          Adherence: 
          100
          %
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Analytics Screen renders correctly 1`] = `null`;

exports[`PainLevelGraph Component renders PainLevelGraph snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 16,
          "marginTop": 128,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="pain_level_prev_week_button"
      >
        <Icon
          color="#14b8a6"
          name="chevron-back"
          size={24}
        />
      </View>
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 28,
          }
        }
        testID="pain-week-title"
      >
        April 20 - April 26, 2025
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="pain_level_next_week_button"
      >
        <Icon
          color="#14b8a6"
          name="chevron-forward"
          size={24}
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "borderBottomColor": "rgba(209, 213, 219, 1)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(209, 213, 219, 1)",
            "borderLeftWidth": 2,
            "borderRightColor": "rgba(209, 213, 219, 1)",
            "borderRightWidth": 2,
            "borderTopColor": "rgba(209, 213, 219, 1)",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 2,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
              "fontWeight": "700",
              "lineHeight": 28,
              "textAlign": "center",
            }
          }
        >
          Average Pain Level: 
          3.3
          /10
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 24,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 28,
            "marginBottom": 8,
            "textAlign": "center",
          }
        }
      >
        Weekly Pain Levels
      </Text>
      <View
        data-chartdata="{"labels":["Mon","Tue","Wed","Thu","Fri","Sat","Sun"],"datasets":[{"data":[5,4,3,4,2,3,2]}]}"
        testID="bar-chart"
      >
        <Text>
          BarChart
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 32,
          "marginTop": 24,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 28,
            "marginBottom": 8,
          }
        }
      >
        Pain History
      </Text>
      <View
        style={
          {
            "borderBottomColor": "rgba(209, 213, 219, 1)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(209, 213, 219, 1)",
            "borderLeftWidth": 2,
            "borderRightColor": "rgba(209, 213, 219, 1)",
            "borderRightWidth": 2,
            "borderTopColor": "rgba(209, 213, 219, 1)",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 2,
            "marginBottom": 12,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "700",
            }
          }
          testID="pain-history-date-0"
        >
          Sunday, April 27
        </Text>
        <Text>
          3
           exercises completed
        </Text>
        <Text
          style={
            {
              "color": "rgba(239, 68, 68, 1)",
            }
          }
        >
          Pain Level: 
          4
          /10
        </Text>
      </View>
      <View
        style={
          {
            "borderBottomColor": "rgba(209, 213, 219, 1)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(209, 213, 219, 1)",
            "borderLeftWidth": 2,
            "borderRightColor": "rgba(209, 213, 219, 1)",
            "borderRightWidth": 2,
            "borderTopColor": "rgba(209, 213, 219, 1)",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 2,
            "marginBottom": 12,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "fontWeight": "700",
            }
          }
          testID="pain-history-date-1"
        >
          Saturday, April 26
        </Text>
        <Text>
          4
           exercises completed
        </Text>
        <Text
          style={
            {
              "color": "rgba(239, 68, 68, 1)",
            }
          }
        >
          Pain Level: 
          2
          /10
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
